/*
 * $Id: ChangeLog,v 1.4485 2005/10/19 02:18:49 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-19 18:00 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/gtwvw/hbgtwvw.h
    + include "hbstack.h"

  * contrib/gtwvw/gtwvw.c
    + #define HB_NO_DEFAULT_API_MACROS
    ! replace &HB_VM_STACK.Return with hb_stackReturnItem()

  * contrib/gtwvw/doc/whatsnew.txt
    * change recorded


2005-10-19 04:12 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapi.h
  * xharbour/include/hbapiitm.h
  * xharbour/include/hbapirdd.h
  * xharbour/include/hbtypes.h
  * xharbour/include/hbvmpub.h
  * xharbour/source/vm/arrays.c
  * xharbour/source/vm/extend.c
  * xharbour/source/vm/hvm.c
  * xharbour/source/vm/itemapi.c
  * xharbour/source/vm/maindllp.c
    * type of HB_ITEM changed from USHORT to HB_ITEM

  * xharbour/include/hbdefs.h
    + added HB_TYPE declaration for HB_ITEM type.
      Now it's defined as UINT32 but can be easy changed here
      and previous value USHORT restored

    Please test, If this will creates to much troubles we can define
    HB_TYPE as USHORT in incoming release for backward binary compatibility.

2005-10-18 16:41 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbsetup.h
    * Replaced SYNCH of HB_THREAD_SUPPORT with Warning and Error
      when conflicts with MT mode of compiler.

  * source/rtl/gtwvt/gtwvt.c
    - Removed wrong HB_ITEM_UNLOCK()
    * Replaced hb_itemClear() of .pFuncModal[ iIndex ] with hb_itemRelease()

2005-10-18 14:24 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbapi.h
    - Removed discouraged HB_ITEM[UN]LOCK() macros.

2005-10-18 13:01 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/estack.c
    - Removed redundant hb_GetStack()

2005-10-18 14:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)