@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4485 2005/10/19 02:18:49 druzus Exp $
+ * $Id: ChangeLog,v 1.4486 2005/10/19 10:59:11 bdj Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-10-19 16:20 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
+  * xharbour/source/rdd/dbffpt/dbffpt1.c
+  * xharbour/source/rdd/dbfntx/dbfntx1.c
+    * updated for HB_TYPE modification
+
+  * xharbour/source/rdd/dbcmd.c
+  * xharbour/source/vm/classes.c
+    * GCC warnings cleanup
 
 2005-10-19 18:00 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
   * contrib/gtwvw/hbgtwvw.h
@@ -18,7 +28,6 @@
 
   * contrib/gtwvw/doc/whatsnew.txt
     * change recorded
-
 
 2005-10-19 04:12 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/include/hbapi.h
